<resources>
    <string name="app_name">MyShopProject</string>

    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <string name="waiting">Waiting…</string>
    <string name="select_image">Select Image :</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="save">Save</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="change_language">Change Language</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="sorted_by">Sorted By</string>
    <string name="data_is_empty">Data is empty</string>
    <string name="buy">Buy</string>
    <string name="trolley">Trolley</string>
    <string name="doubledot">:</string>
    <string name="detail_product">Detail Product</string>
    <string name="stock">Stock</string>
    <string name="size">Size</string>
    <string name="weight">Weight</string>
    <string name="type">Type</string>
    <string name="description">Description</string>
    <string name="buy_now">Buy Now - </string>
    <string name="select_payment">Select Payment Method</string>
    <string name="total">Total</string>
    <string name="share">Share</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="select_all">Select All</string>
    <string name="total_price">Total Price</string>
    <string name="out_of_stock">Out Of Stock</string>
    <string name="give_your_rating">Give Your Rating</string>
    <string name="submit">Submit</string>
    <string name="your_order_is_successful">Your Order is Successful</string>
    <string name="check_your_connectivity">Check your connectivity.</string>
    <string name="notification">Notification</string>
    <string name="empty_notification">Empty Notification</string>
    <string name="delete">Delete</string>
    <string name="read_notification">Read Notification</string>
    <string name="check_notification">Check Notification</string>
    <string name="multiple_select">Multiple Select</string>
    <string name="check_data_trolley">Product has already in trolley.</string>
    <string name="add_to_trolley">Add to trolley.</string>
    <string name="failed_add_trolley">This product is out of stock.</string>
    <string name="success_add_to_favorite">Success add to favorite.</string>
    <string name="success_remove_favorite">Success remove from favorite.</string>
    <string name="error_too_many_request">Too many request.</string>
    <string name="error_an_unknown">An unknown error occurred.</string>
    <string name="login_successful">Login Successfully.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>