<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".presentation.register.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivProductLogo"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="92dp"
            android:contentDescription="@null"
            android:src="@drawable/splash_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/flPhotoProfile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivProductLogo">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/ivPhotoProfile"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder_img"
                app:riv_oval="true" />

            <ImageButton
                android:id="@+id/ivButtonProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:background="@drawable/bg_button_profile"
                android:contentDescription="@null"
                android:padding="10dp"
                app:srcCompat="@drawable/ic_lock" />

        </FrameLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_form"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/flPhotoProfile">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmailRegister"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="64dp"
                app:boxBackgroundColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmailRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPasswordRegister"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tilEmailRegister"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                app:boxBackgroundColor="@color/white"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPasswordRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilConfPasswordRegister"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tilPasswordRegister"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                app:boxBackgroundColor="@color/white"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etConfPasswordRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilNameRegister"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tilConfPasswordRegister"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                app:boxBackgroundColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNameRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/name"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPhoneRegister"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tilNameRegister"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                app:boxBackgroundColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPhoneRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/phone_number"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tilPhoneRegister"
                android:layout_alignStart="@+id/tilPhoneRegister"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins"
                android:text="@string/gender" />

            <RadioGroup
                android:id="@+id/rgGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvGender"
                android:layout_alignStart="@+id/tvGender"
                android:layout_alignEnd="@+id/tilPhoneRegister"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <RadioButton
                    android:id="@+id/rbMale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/rbFemale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins"
                    android:text="@string/female" />

            </RadioGroup>

            <Button
                android:id="@+id/btnSignUp"
                style="@style/Ctm.Button.Login"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rgGender"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/sign_up" />

            <Button
                android:id="@+id/btnToLogin"
                style="@style/Ctm.Button.SignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnSignUp"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="64dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/login" />

            <ProgressBar
                android:id="@+id/pbRegister"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:indeterminate="true"
                android:visibility="gone" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>