<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg_color"
    tools:context=".presentation.auth.signup.SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivProductLogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@null"
            android:src="@drawable/splash_logo" />

        <FrameLayout
            android:id="@+id/flPhotoProfile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivProductLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="8dp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/ivPhotoProfile"
                app:riv_oval="true"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder_img" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabButtonProfile"
                app:backgroundTint="@color/white"
                app:elevation="0dp"
                app:srcCompat="@drawable/ic_camera_filled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:contentDescription="@null" />

        </FrameLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/flPhotoProfile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_form">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmailRegister"
                app:boxBackgroundColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="32dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmailRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPasswordRegister"
                app:boxBackgroundColor="@color/white"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="@+id/tilEmailRegister"
                app:layout_constraintStart_toStartOf="@+id/tilEmailRegister"
                app:layout_constraintTop_toBottomOf="@+id/tilEmailRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPasswordRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilConfPasswordRegister"
                app:boxBackgroundColor="@color/white"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="@+id/tilPasswordRegister"
                app:layout_constraintStart_toStartOf="@+id/tilPasswordRegister"
                app:layout_constraintTop_toBottomOf="@+id/tilPasswordRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etConfPasswordRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilNameRegister"
                app:boxBackgroundColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/tilConfPasswordRegister"
                app:layout_constraintStart_toStartOf="@+id/tilConfPasswordRegister"
                app:layout_constraintTop_toBottomOf="@+id/tilConfPasswordRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNameRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/name"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPhoneRegister"
                app:boxBackgroundColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/tilNameRegister"
                app:layout_constraintStart_toStartOf="@+id/tilNameRegister"
                app:layout_constraintTop_toBottomOf="@+id/tilNameRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPhoneRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/phone_number"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvGender"
                app:layout_constraintStart_toStartOf="@+id/tilPhoneRegister"
                app:layout_constraintTop_toBottomOf="@+id/tilPhoneRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/gender" />

            <RadioGroup
                android:id="@+id/rgGender"
                app:layout_constraintEnd_toEndOf="@+id/tilPhoneRegister"
                app:layout_constraintStart_toStartOf="@+id/tilPhoneRegister"
                app:layout_constraintTop_toBottomOf="@+id/tvGender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <RadioButton
                    android:id="@+id/rbMale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/rbFemale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/female" />

            </RadioGroup>

            <Button
                android:id="@+id/btnSignUp"
                app:layout_constraintEnd_toEndOf="@+id/rgGender"
                app:layout_constraintStart_toStartOf="@+id/rgGender"
                app:layout_constraintTop_toBottomOf="@+id/rgGender"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/sign_up" />

            <Button
                android:id="@+id/btnToLogin"
                style="@style/Ctm.Button.Auth"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:fontFamily="@font/poppins_bold"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/login"
                android:theme="@android:style/ThemeOverlay.Material.Dark" />

            <include
                android:id="@+id/registerCardLoading"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                layout="@layout/custom_loading"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="32dp"
                android:visibility="gone" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>